[package]
name = "rs-liquibase"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 数据库驱动 (支持多数据库)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite"] }
# XML 解析 (高性能)
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
# 校验和计算
sha2 = "0.10"
hex = "0.4"
# 错误处理
anyhow = "1.0"
# 日志
tracing = "0.1"